--- a/web/assignments.html
+++ b/web/assignments.html
@@ -12,7 +12,7 @@
     <h2>CS 313 Assignments</h2>
     <ul >
         <li><a href="W02/assign02.php">Week #02 assignment</a></li>
-        <li class = "hide_me"><a href="#">Week #03 assignment</a></li>
+        <li <a href="W03/assign03.php">Week #03 assignment</a></li>
         <li class = "hide_me"><a href="#">Week #04 assignment</a></li>
         <li class = "hide_me"><a href="#">Week #05 assignment</a></li>
         <li class = "hide_me"><a href="#">Week #06 assignment</a></li>
